new: usr: TCP reordering
  * killing of mux_subparsers is now synchronous.

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,5 +13,8 @@ cscope:
 distclean-local:
 	rm -f cscope.out
 
+clear:
+	find $(top_srcdir) -type f -\( -name '*.c' -o -name '*.h' -\) | xargs sed -i -e 's/[ \t]\+$$//'
+
 doc: Doxyfile
 	doxygen $<
