--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,7 +9,8 @@ check_PROGRAMS = \
 	ip_check udp_check tcp_check http_check sip_check \
 	sdp_check mgcp_check dns_check cnxtrack_check \
 	icmp_check rtcp_check flood_check port_range_check \
-	arp_check pkt_wait_list_check ip_reassembly_check
+	arp_check pkt_wait_list_check ip_reassembly_check \
+	tcp_reorder_check
 
 TESTS = $(check_PROGRAMS)
 
@@ -69,8 +70,10 @@ pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib.c lib.h ../src/ext.c ../
 pkt_wait_list_check_LDADD = ../src/tools/libtools.la
 ip_reassembly_check_SOURCES = ip_reassembly_check.c lib.c lib.h ../src/ext.c
 ip_reassembly_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
+tcp_reorder_check_SOURCES = tcp_reorder_check.c lib.c lib.h ../src/ext.c
+tcp_reorder_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
 
-distclean-local:
+clean-local:
 	rm -f *.log vgcore.* core.* core
 
 EXTRA_DIST = foreach.txt
