new: usr: PostgreSQL parser.
  * Use a new streambuf object that can be used to linearize stream for parsers

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ tests/tags
 tests/pkt_wait_list_check
 tests/ip_reassembly_check
 tests/tcp_reorder_check
+tests/streambuf_check
+tests/postgres_check
