--- a/src/proto/Makefile.am
+++ b/src/proto/Makefile.am
@@ -13,7 +13,9 @@ libproto_la_SOURCES = \
 	sdp.c sdper.c sdper.h \
 	sip.c ssl.c \
 	tcp.c udp.c \
-	pkt_wait_list.c
+	postgres.c \
+	pkt_wait_list.c \
+	streambuf.c
 
 libproto_la_LIBADD = ../tools/libtools.la
 libproto_la_LDFLAGS = -export-dynamic
