--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -11,7 +11,7 @@ check_PROGRAMS = \
 	icmp_check rtcp_check flood_check port_range_check \
 	arp_check pkt_wait_list_check ip_reassembly_check \
 	tcp_reorder_check streambuf_check \
-	postgres_check oracle_check
+	postgres_check oracle_check endianness_check
 
 dist_check_SCRIPTS = postgres.test mysql.test oracle.test
 
@@ -21,66 +21,68 @@ TESTS_ENVIRONMENT = EF_ALLOW_MALLOC_0=1
 
 #LDFLAGS += -lefence
 
-digest_queue_check_SOURCES = digest_queue_check.c ../src/ext.c
+digest_queue_check_SOURCES = digest_queue_check.c
 digest_queue_check_LDADD = ../src/tools/libtools.la
-timeval_check_SOURCES = timeval_check.c ../src/ext.c
+timeval_check_SOURCES = timeval_check.c
 timeval_check_LDADD = ../src/tools/libtools.la
-files_check_SOURCES = files_check.c ../src/ext.c
+files_check_SOURCES = files_check.c
 files_check_LDADD = ../src/tools/libtools.la
-hash_check_SOURCES = hash_check.c ../src/ext.c
+hash_check_SOURCES = hash_check.c
 hash_check_LDADD = ../src/tools/libtools.la
-liner_check_SOURCES = liner_check.c ../src/ext.c
+liner_check_SOURCES = liner_check.c
 liner_check_LDADD = ../src/tools/libtools.la
-ip_addr_check_SOURCES = ip_addr_check.c ../src/ext.c
+ip_addr_check_SOURCES = ip_addr_check.c
 ip_addr_check_LDADD = ../src/tools/libtools.la
 jhash_check_SOURCES = jhash_check.c
-log_check_SOURCES = log_check.c ../src/ext.c
+log_check_SOURCES = log_check.c
 log_check_LDADD = ../src/tools/libtools.la
-redim_array_check_SOURCES = redim_array_check.c ../src/ext.c
+redim_array_check_SOURCES = redim_array_check.c
 redim_array_check_LDADD = ../src/tools/libtools.la
-mallocer_check_SOURCES = mallocer_check.c ../src/ext.c
+mallocer_check_SOURCES = mallocer_check.c
 mallocer_check_LDADD = ../src/tools/libtools.la
 
-ip_check_SOURCES = ip_check.c lib.c lib.h ../src/ext.c
+ip_check_SOURCES = ip_check.c lib.c lib.h
 ip_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-udp_check_SOURCES = udp_check.c lib.c lib.h ../src/ext.c
+udp_check_SOURCES = udp_check.c lib.c lib.h
 udp_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-tcp_check_SOURCES = tcp_check.c lib.c lib.h ../src/ext.c
+tcp_check_SOURCES = tcp_check.c lib.c lib.h
 tcp_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-http_check_SOURCES = http_check.c lib.c lib.h ../src/ext.c
+http_check_SOURCES = http_check.c lib.c lib.h
 http_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-sip_check_SOURCES = sip_check.c lib.c lib.h ../src/ext.c
+sip_check_SOURCES = sip_check.c lib.c lib.h
 sip_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-sdp_check_SOURCES = sdp_check.c lib.c lib.h ../src/ext.c
+sdp_check_SOURCES = sdp_check.c lib.c lib.h
 sdp_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-mgcp_check_SOURCES = mgcp_check.c lib.c lib.h ../src/ext.c
+mgcp_check_SOURCES = mgcp_check.c lib.c lib.h
 mgcp_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-dns_check_SOURCES = dns_check.c lib.c lib.h ../src/ext.c
+dns_check_SOURCES = dns_check.c lib.c lib.h
 dns_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-cnxtrack_check_SOURCES = cnxtrack_check.c lib.c lib.h ../src/ext.c
+cnxtrack_check_SOURCES = cnxtrack_check.c lib.c lib.h
 cnxtrack_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-icmp_check_SOURCES = icmp_check.c lib.c lib.h ../src/ext.c
+icmp_check_SOURCES = icmp_check.c lib.c lib.h
 icmp_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-rtcp_check_SOURCES = rtcp_check.c lib.c lib.h ../src/ext.c
+rtcp_check_SOURCES = rtcp_check.c lib.c lib.h
 rtcp_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-arp_check_SOURCES = arp_check.c lib.c lib.h ../src/ext.c
+arp_check_SOURCES = arp_check.c lib.c lib.h
 arp_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-flood_check_SOURCES = flood_check.c lib.c lib.h ../src/ext.c
+flood_check_SOURCES = flood_check.c lib.c lib.h
 flood_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-port_range_check_SOURCES = port_range_check.c lib.c lib.h ../src/ext.c
+port_range_check_SOURCES = port_range_check.c lib.c lib.h
 port_range_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib.c lib.h ../src/ext.c ../src/proto/proto.c
+pkt_wait_list_check_SOURCES = pkt_wait_list_check.c lib.c lib.h ../src/proto/proto.c
 pkt_wait_list_check_LDADD = ../src/tools/libtools.la
-ip_reassembly_check_SOURCES = ip_reassembly_check.c lib.c lib.h ../src/ext.c
+ip_reassembly_check_SOURCES = ip_reassembly_check.c lib.c lib.h
 ip_reassembly_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-tcp_reorder_check_SOURCES = tcp_reorder_check.c lib.c lib.h ../src/ext.c
+tcp_reorder_check_SOURCES = tcp_reorder_check.c lib.c lib.h
 tcp_reorder_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-streambuf_check_SOURCES = streambuf_check.c lib.c lib.h ../src/ext.c
+streambuf_check_SOURCES = streambuf_check.c lib.c lib.h
 streambuf_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-postgres_check_SOURCES = postgres_check.c lib.c lib.h ../src/ext.c
+postgres_check_SOURCES = postgres_check.c lib.c lib.h
 postgres_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
-oracle_check_SOURCES = oracle_check.c lib.c lib.h ../src/ext.c
+oracle_check_SOURCES = oracle_check.c lib.c lib.h
 oracle_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
+endianness_check_SOURCES = endianness_check.c
+endianness_check_LDADD = ../src/tools/libtools.la
 
 clean-local:
 	rm -f *.log vgcore.* core.* core
