--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -10,7 +10,7 @@ check_PROGRAMS = \
 	sdp_check mgcp_check dns_check cnxtrack_check \
 	icmp_check rtcp_check flood_check port_range_check \
 	arp_check pkt_wait_list_check ip_reassembly_check \
-	tcp_reorder_check streambuf_check \
+	tcp_reorder_check streambuf_check cli_check \
 	postgres_check oracle_check endianness_check
 
 dist_check_SCRIPTS = postgres.test mysql.test oracle.test http-truncation.test
@@ -40,6 +40,8 @@ redim_array_check_SOURCES = redim_array_check.c
 redim_array_check_LDADD = ../src/tools/libtools.la
 mallocer_check_SOURCES = mallocer_check.c
 mallocer_check_LDADD = ../src/tools/libtools.la
+cli_check_SOURCES = cli_check.c
+cli_check_LDADD = ../src/tools/libtools.la
 
 ip_check_SOURCES = ip_check.c lib.c lib.h
 ip_check_LDADD = ../src/tools/libtools.la ../src/proto/libproto.la
