new: usr: plugin that save traffic above a given throughput.

--- a/configure.ac
+++ b/configure.ac
@@ -52,6 +52,7 @@ AC_CONFIG_FILES([
 	src/proto/Makefile
 	plugins/dumper/Makefile
 	plugins/writer/Makefile
+	plugins/rater/Makefile
 	config/Makefile
 	tests/Makefile
 ])
