chg: dev: new command line handling
  Now plugins can alter the command line that follow them.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -38,4 +38,5 @@ pkginclude_HEADERS = \
 	junkie/tools/jhash.h \
 	junkie/tools/queue.h \
 	junkie/tools/log.h \
-	junkie/tools/redim_array.h
+	junkie/tools/redim_array.h \
+	junkie/tools/cli.h
