--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -6,5 +6,5 @@ noinst_LTLIBRARIES = libtools.la
 libtools_la_SOURCES = \
 	files.c hash.c ip_addr.c jhash.c \
 	log.c mallocer.c mutex.c redim_array.c \
-	tempstr.c timeval.c ext.c
+	tempstr.c timeval.c ext.c cli.c
 libtools_la_LDFLAGS = -export-dynamic
