fix: dlopened libs are meant to be installed in pkglibdir

--- a/plugins/dumper/Makefile.am
+++ b/plugins/dumper/Makefile.am
@@ -1,7 +1,7 @@
 AM_CFLAGS = -std=c99 -Wall -W
 AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE
 
-lib_LTLIBRARIES = dumper.la
+pkglib_LTLIBRARIES = dumper.la
 
 dumper_la_SOURCES = dumper.c
 dumper_la_LDFLAGS = -module -avoid-version
