--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,7 +16,7 @@ check_PROGRAMS = \
 dist_check_SCRIPTS = \
 	postgres.test mysql.test oracle.test \
 	http-truncation.test digest_queue.scm \
-	pkt_source_stats.scm
+	pkt_source_stats.scm eth_padding.test
 
 TESTS = $(check_PROGRAMS) $(dist_check_SCRIPTS)
 
