fix: dev_id should not change when listening the same iface from several threads.
  Additionally, this number should be easily related to iface name.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,7 +16,8 @@ check_PROGRAMS = \
 dist_check_SCRIPTS = \
 	postgres.test mysql.test oracle.test \
 	http-truncation.test digest_queue.scm \
-	pkt_source_stats.scm eth_padding.test
+	pkt_source_stats.scm eth_padding.test \
+	pkt_source_dev_id.scm
 
 TESTS = $(check_PROGRAMS) $(dist_check_SCRIPTS)
 
