chg: Better integration with Guile.
  Now replacing guile by guile-2.0 should work.

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,11 @@ AC_PROG_LIBTOOL
 # Checks for libraries.
 AC_CHECK_LIB(ssl, SHA1, , [exit 1])
 AC_CHECK_LIB(pcap, pcap_activate, , [exit 1])
-AC_CHECK_LIB(guile, scm_with_guile, , [exit 1])
+AC_CHECK_LIB(guile, scm_with_guile,
+	[
+		CFLAGS="$(guile-config compile) $CFLAGS"
+		LDFLAGS="$(guile-config link) $LDFLAGS"
+	], [exit 1])
 AC_CHECK_LIB(pthread, pthread_mutex_init, , [exit 1])
 AC_CHECK_LIB(ltdl, lt_dlopen, , [exit 1])
 
