chg: dev: finer grained locks.
  RAM consumption is higher, though.
  Release memory associated with threads at exit.
  Get rid of the reference that made loops in the parser tree
  (requestor now points toward the proto not the parser).
  Fix SLOG_HEX.
  Add a valgrind suppression file.
  Use GCC builtin extensions for atomic update of stats.
  Clean warnings and make checks works when compiling with NDEBUG.
  New utility functions timeval_set_min/max()
  A thread that automaticaly resizes TCP/UDP hashes.
  Make starting hash sizes more realistic and prime.

--- a/config/Makefile.am
+++ b/config/Makefile.am
@@ -7,6 +7,7 @@ dist_pkgsysconf_DATA = \
 	snmp-subagt.scm \
 	start-snmp.scm \
 	start-repl.scm \
+	start-resizer.scm \
 	junkie.rlwrap \
 	report-simult.scm
 
