--- a/configure.ac
+++ b/configure.ac
@@ -44,6 +44,11 @@ AC_C_BIGENDIAN()
 AC_FUNC_CHOWN
 AC_CHECK_FUNCS([clock_gettime localtime_r mkdir regcomp rmdir sqrt strcasecmp strncasecmp strtoull prctl strnstr malloc_stats mallinfo])
 
+# Some build parameters
+AC_ARG_VAR([CPU_MAX], [Approx of max number of available CPU])
+AS_IF([test "x$CPU_MAX" = x], [CPU_MAX="32"])
+AC_DEFINE_UNQUOTED([CPU_MAX], [$CPU_MAX], [Approx of max number of available CPU])
+
 # Where to install various things
 AC_ARG_VAR([CONFDIR], [Where to store configuration files [SYSCONFDIR/junkie]])
 AS_IF([test "x$CONFDIR" = x], [CONFDIR="$sysconfdir/junkie"])
