--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -40,4 +40,6 @@ pkginclude_HEADERS = \
 	junkie/tools/queue.h \
 	junkie/tools/log.h \
 	junkie/tools/redim_array.h \
-	junkie/tools/cli.h
+	junkie/tools/cli.h \
+	junkie/tools/ref.h
+
