--- a/Makefile.am
+++ b/Makefile.am
@@ -3,15 +3,19 @@ ACLOCAL_AMFLAGS = -I m4
 
 dist_doc_DATA = README NEWS COPYING LICENSE.AGPL LICENSE.BSD LICENSE.LGPL LICENSE.OpenSSL KNOWN_ISSUES USAGE
 
-SUBDIRS = include src config plugins/dumper plugins/writer plugins/rater plugins/arpgraph tests
+SUBDIRS = include src config plugins/dumper plugins/writer plugins/rater plugins/arpgraph guile tests
 
 .PHONY: cscope doc clear
+
+EXTRA_DIST = .tarball-version
+.tarball-version:
+	echo "$(VERSION)" > $@
 
 cscope:
 	cd $(top_srcdir) && cscope -Rb $(CPPFLAGS)
 
 distclean-local:
-	rm -f cscope.out
+	rm -f cscope.out .tarball-version
 
 clear:
 	find $(top_srcdir) -type f -\( -name '*.c' -o -name '*.h' -\) | xargs sed -i -e 's/[ \t]\+$$//'
