--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -23,7 +23,7 @@ dist_check_SCRIPTS = \
 
 TESTS = $(check_PROGRAMS) $(dist_check_SCRIPTS)
 
-TESTS_ENVIRONMENT = EF_ALLOW_MALLOC_0=1
+TESTS_ENVIRONMENT = EF_ALLOW_MALLOC_0=1 GUILE_LOAD_PATH=$(top_srcdir)/guile GUILE_WARN_DEPRECATED=no
 
 #LDFLAGS += -lefence
 
