new: first version with workable msg dumper (named nark)
  Also, info forwarding would greatly benefit from packing several msg in
  a datagram (since size of info are between 50 and 60 bytes in average).

--- a/configure.ac
+++ b/configure.ac
@@ -71,6 +71,7 @@ AC_CONFIG_FILES([
 	plugins/writer/Makefile
 	plugins/rater/Makefile
 	plugins/arpgraph/Makefile
+	plugins/serializer/Makefile
 	config/Makefile
 	guile/Makefile
 	guile/junkie/Makefile
