new: a www server for configuration

--- a/configure.ac
+++ b/configure.ac
@@ -74,7 +74,10 @@ AC_CONFIG_FILES([
 	plugins/serializer/Makefile
 	config/Makefile
 	guile/Makefile
+	guile/srfi/Makefile
 	guile/junkie/Makefile
+	guile/junkie/www/Makefile
+	guile/junkie/www/static_files/Makefile
 	tests/Makefile
 ])
 AC_OUTPUT
