--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -19,7 +19,8 @@ dist_check_SCRIPTS = \
 	http-truncation.test digest_queue.scm \
 	pkt_source_stats.scm eth_padding.test \
 	pkt_source_dev_id.scm ftp.test gre.test \
-	ip.test timeout.scm eth.test serialize_check
+	ip.test timeout.scm eth.test sip.test \
+	serialize_check
 
 TESTS = $(check_PROGRAMS) $(dist_check_SCRIPTS)
 
