new: a crudable to control pcap captures

--- a/configure.ac
+++ b/configure.ac
@@ -78,6 +78,7 @@ AC_CONFIG_FILES([
 	guile/junkie/Makefile
 	guile/junkie/www/Makefile
 	guile/junkie/www/static_files/Makefile
+	guile/junkie/writer/Makefile
 	tests/Makefile
 ])
 AC_OUTPUT
