chg: rename libtools to libjunkietools and have it installed.
  As a consequence, automake links dynamically against it.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,11 +16,11 @@ junkie_SOURCES = \
 	plugins.h \
 	capfile.c
 
-junkie_LDADD = proto/libproto.la tools/libtools.la
+junkie_LDADD = proto/libproto.la tools/libjunkietools.la
 junkie_LDFLAGS = -export-dynamic
 
 nark_SOURCES = \
 	nark.c
 
-nark_LDADD = proto/libproto.la tools/libtools.la
+nark_LDADD = proto/libproto.la tools/libjunkietools.la
 
