--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -1,11 +1,11 @@
 AM_CFLAGS = -std=c99 -Wall -W
 AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE
 
-noinst_LTLIBRARIES = libtools.la
+lib_LTLIBRARIES = libjunkietools.la
 
-libtools_la_SOURCES = \
+libjunkietools_la_SOURCES = \
 	files.c hash.c ip_addr.c jhash.c \
 	log.c mallocer.c mutex.c redim_array.c \
 	tempstr.c timeval.c ext.c cli.c ref.c \
 	sock.c
-libtools_la_LDFLAGS = --export-dynamic
+libjunkietools_la_LDFLAGS = --export-dynamic
