--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,49 +1,1 @@
-pkginclude_HEADERS = \
-	junkie/config.h \
-	junkie/cpp.h \
-	junkie/capfile.h \
-	junkie/proto/ftp.h \
-	junkie/proto/http.h \
-	junkie/proto/cap.h \
-	junkie/proto/tcp.h \
-	junkie/proto/proto.h \
-	junkie/proto/arp.h \
-	junkie/proto/sdp.h \
-	junkie/proto/udp.h \
-	junkie/proto/bittorrent.h \
-	junkie/proto/eth.h \
-	junkie/proto/dns.h \
-	junkie/proto/icmp.h \
-	junkie/proto/rtp.h \
-	junkie/proto/netbios.h \
-	junkie/proto/ip.h \
-	junkie/proto/gre.h \
-	junkie/proto/ssl.h \
-	junkie/proto/cifs.h \
-	junkie/proto/mgcp.h \
-	junkie/proto/rtcp.h \
-	junkie/proto/sip.h \
-	junkie/proto/sql.h \
-	junkie/proto/port_muxer.h \
-	junkie/proto/pkt_wait_list.h \
-	junkie/proto/streambuf.h \
-	junkie/proto/cursor.h \
-	junkie/proto/cnxtrack.h \
-	junkie/tools/ext.h \
-	junkie/tools/mutex.h \
-	junkie/tools/files.h \
-	junkie/tools/mallocer.h \
-	junkie/tools/tempstr.h \
-	junkie/tools/hash.h \
-	junkie/tools/miscmacs.h \
-	junkie/tools/ip_addr.h \
-	junkie/tools/timeval.h \
-	junkie/tools/jhash.h \
-	junkie/tools/queue.h \
-	junkie/tools/log.h \
-	junkie/tools/redim_array.h \
-	junkie/tools/cli.h \
-	junkie/tools/ref.h \
-	junkie/tools/sock.h \
-	junkie/tools/serialize.h
-
+SUBDIRS = junkie
