--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -7,5 +7,6 @@ libjunkietools_la_SOURCES = \
 	files.c hash.c ip_addr.c jhash.c \
 	log.c mallocer.c mutex.c redim_array.c \
 	tempstr.c timeval.c ext.c cli.c ref.c \
-	sock.c
+	sock.c serialization.c
 libjunkietools_la_LDFLAGS = --export-dynamic
+
