--- a/configure.ac
+++ b/configure.ac
@@ -82,6 +82,7 @@ AC_CONFIG_FILES([
 	guile/junkie/www/Makefile
 	guile/junkie/www/static_files/Makefile
 	guile/junkie/writer/Makefile
+	guile/junkie/netmatch/Makefile
 	tests/Makefile
 ])
 AC_OUTPUT
