--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = tools proto .
 AM_CFLAGS = -std=c99 -Wall -W
 AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE -DTAGNAME=@TAGNAME@ -DBRANCHNAME=@BRANCHNAME@ -DCOMP_HOST=@COMP_HOST@ -DSYSCONFDIR=$(sysconfdir)
 
-bin_PROGRAMS = junkie nark
+bin_PROGRAMS = junkie
 dist_bin_SCRIPTS = juncli
 
 junkie_SOURCES = \
@@ -13,14 +13,8 @@ junkie_SOURCES = \
 	pkt_source.c \
 	pkt_source.h \
 	plugins.c \
-	plugins.h \
-	capfile.c
+	plugins.h
 
 junkie_LDADD = proto/libproto.la tools/libjunkietools.la
 junkie_LDFLAGS = -export-dynamic
-
-nark_SOURCES = \
-	nark.c
-
-nark_LDADD = proto/libproto.la tools/libjunkietools.la
 
