--- a/plugins/nettrack/Makefile.am
+++ b/plugins/nettrack/Makefile.am
@@ -3,6 +3,9 @@ AM_CPPFLAGS = -I $(top_srcdir)/include -D_GNU_SOURCE
 
 pkglib_LTLIBRARIES = nettrack.la
 
-nettrack_la_SOURCES = nettrack.c
+nettrack_la_SOURCES = \
+	nettrack.c nettrack.h \
+	graph.c graph.h
+
 nettrack_la_LDFLAGS = -module -avoid-version
 
