chg: dev: First version that creates actual graphs.
  * Rename netmatch compiler to netmatch netmatch
  * Add a dependency on junkie defs so we can log
  * Add a do sequencing operator (and it's void type)

--- a/guile/junkie/netmatch/Makefile.am
+++ b/guile/junkie/netmatch/Makefile.am
@@ -1,5 +1,6 @@
 guilelibdir = @GUILELIBDIR@/junkie/netmatch
 dist_guilelib_DATA = \
-	compiler.scm \
+	netmatch.scm \
 	ll-compiler.scm \
-	types.scm
+	types.scm \
+	nettrack.scm
