new: Support for HTTP chunked transfert encoding

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,7 +21,8 @@ dist_check_SCRIPTS = \
 	pkt_source_dev_id.scm ftp.test gre.test \
 	ip.test timeout.scm eth.test sip.test \
 	serialize_check writer_check.scm \
-	dedup_conf1.test dedup_conf2.test
+	dedup_conf1.test dedup_conf2.test \
+	http-chunked.test
 
 TESTS = $(check_PROGRAMS) $(dist_check_SCRIPTS)
 
