fix: cosmetic: clear trailing spaces

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ distclean-local:
 	rm -f cscope.out .tarball-version
 
 clear:
-	find $(top_srcdir) -type f -\( -name '*.c' -o -name '*.h' -\) | xargs sed -i -e 's/[ \t]\+$$//'
+	find $(top_srcdir) -type f -\( -name '*.c' -o -name '*.h' -o -name '*.scm' -\) | xargs sed -i -e 's/[ \t]\+$$//'
 
 doc: Doxyfile
 	doxygen $<
