--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,7 +16,7 @@ check_PROGRAMS = \
 
 dist_check_SCRIPTS = \
 	postgres.test mysql.test oracle.test dns.test \
-	http-truncation.test digest_queue.scm \
+	http-truncation.test \
 	pkt_source_stats.scm eth_padding.test \
 	pkt_source_dev_id.scm ftp.test gre.test \
 	ip.test timeout.scm eth.test sip.test \
