new: precompilation of scm files into go files

--- a/guile/junkie/netmatch/Makefile.am
+++ b/guile/junkie/netmatch/Makefile.am
@@ -1,6 +1,16 @@
 guilelibdir = @GUILELIBDIR@/junkie/netmatch
-dist_guilelib_DATA = \
+
+include $(top_srcdir)/scm2go.am
+
+SCM = \
 	netmatch.scm \
 	ll-compiler.scm \
 	types.scm \
 	nettrack.scm
+
+GOBJECTS = $(SCM:%.scm=%.go)
+
+dist_guilelib_DATA = $(SCM) $(GOBJECTS)
+
+distclean-local:
+	@rm -f $(GOBJECTS)
