--- a/guile/junkie/writer/Makefile.am
+++ b/guile/junkie/writer/Makefile.am
@@ -1,2 +1,12 @@
 guilelibdir = @GUILELIBDIR@/junkie/writer
-dist_guilelib_DATA = capturer.scm
+
+include $(top_srcdir)/scm2go.am
+
+SCM = capturer.scm
+
+GOBJECTS = $(SCM:%.scm=%.go)
+
+dist_guilelib_DATA = $(SCM) $(GOBJECTS)
+
+distclean-local:
+	@rm -f $(GOBJECTS)
