--- a/guile/junkie/www/Makefile.am
+++ b/guile/junkie/www/Makefile.am
@@ -1,7 +1,17 @@
 SUBDIRS = static_files
 
+include $(top_srcdir)/scm2go.am
+
 guilelibdir = @GUILELIBDIR@/junkie/www
-dist_guilelib_DATA = \
+
+SCM = \
 	crud.scm \
 	monitor.scm \
 	server.scm
+
+GOBJECTS = $(SCM:%.scm=%.go)
+
+dist_guilelib_DATA = $(SCM) $(GOBJECTS)
+
+distclean-local:
+	@rm -f $(GOBJECTS)
