--- a/guile/srfi/Makefile.am
+++ b/guile/srfi/Makefile.am
@@ -1,3 +1,10 @@
-guilelibdir = @GUILELIBDIR@/srfi
-dist_guilelib_DATA = srfi-43.scm
+include $(top_srcdir)/scm2go.am
 
+guilelibdir = @GUILELIBDIR@/srfi
+SCM = srfi-43.scm
+GOBJECTS = $(SCM:%.scm=%.go)
+
+dist_guilelib_DATA = $(SCM) $(GOBJECTS)
+
+distclean-local:
+	@rm -f $(GOBJECTS)
