fix: install go files in cachedir instead of libdir
  Guile does not read .go files from the same dir than scm files.
  This patch installs the go files where it looks for them, and adds
  a GUILECACHEDIR autoconf variable to change it.
  The default value for this dir is taken from guile itself but may fail
  or return the wrong path. But as the guile manual says, "Currently there
  is no procedure to get at this path, which is probably a bug."
  Others hardcode the path in the Makefile... :-/

--- a/guile/junkie/writer/Makefile.am
+++ b/guile/junkie/writer/Makefile.am
@@ -6,7 +6,13 @@ SCM = capturer.scm
 
 GOBJECTS = $(SCM:%.scm=%.go)
 
-dist_guilelib_DATA = $(SCM) $(GOBJECTS)
+dist_guilelib_DATA = $(SCM)
+
+guilecachedir = @GUILECACHEDIR@/junkie/writer
+dist_guilecache_DATA = $(GOBJECTS)
+
+install_go_files = install-dist_guilecacheDATA
+$(install_go_files): install-dist_guilelibDATA
 
 distclean-local:
 	@rm -f $(GOBJECTS)
