--- a/guile/junkie/www/Makefile.am
+++ b/guile/junkie/www/Makefile.am
@@ -11,7 +11,13 @@ SCM = \
 
 GOBJECTS = $(SCM:%.scm=%.go)
 
-dist_guilelib_DATA = $(SCM) $(GOBJECTS)
+dist_guilelib_DATA = $(SCM)
+
+guilecachedir = @GUILECACHEDIR@/junkie/www
+dist_guilecache_DATA = $(GOBJECTS)
+
+install_go_files = install-dist_guilecacheDATA
+$(install_go_files): install-dist_guilelibDATA
 
 distclean-local:
 	@rm -f $(GOBJECTS)
