chg: deduplication have to build a proto_info to call its subscribers.
  Deduplication is willing to be a subparser on its own.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@ bin_PROGRAMS = junkie
 dist_bin_SCRIPTS = juncli
 
 junkie_SOURCES = \
-	digest_queue.c digest_queue.h \
+	digest_queue.c \
 	main.c \
 	pkt_source.c pkt_source.h \
 	plugins.c plugins.h \
